--- a/public/assets/scss/core/_header.scss
+++ b/public/assets/scss/core/_header.scss
@@ -1,367 +1,9 @@
-.nav-toggle{
-
-    
-    padding: 10px 10px;
-    margin-bottom: 15px;
-    box-shadow: none;
-    @media #{$max-md}{
-        display: inline-block !important;
-    }
-    &:focus{
-        box-shadow: none;
-    }
-}  
-
 .main-header {
     position: fixed;
     top: 0;
     left: 0;
     right: 0;
     z-index: 999;
-    background:$darkbg;
-    .dd-ico{
-        .nav-link{
-            padding: 0.5rem 1rem;
-            @media #{$max-xsm}{
-                padding-left: 0;
-            }
-        }
-    }
-    .navbar-collapse{
-        flex-grow: unset;
-    }
-    
-    .nav-link{
-        font-size: 18px;
-        color:$white;
-        font-weight: 600;
-        transform: translateY(1px);
-        @media #{$max-xxxl}{
-            font-size: 16px;
-        }
-        @media #{$max-xxl}{
-            font-size: 14px;
-        }
-        &.active {
-            border-bottom-color:#fea700;
-        }
-    }
-    .navbar-brand {
-        padding: 24px 0;
-        display: inline-block;
-        cursor: pointer;
-        @media #{$max-xxxl}{
-            max-width: 150px;
-            padding: 20px;
-        }
-        @media #{$max-md}{
-            padding: 15px;
-            max-width: 130px;
-            margin-right: 10px;
-        }
-        @media #{$max-md}{
-            max-width: 120px;
-        }
-        @media #{$max-xsm}{
-            max-width: 100px;
-            padding:10px 0;
-            margin-left: 4px;
-            margin-right: 0;
-        }
-        @media(max-width:360px){
-            max-width:75px ;
-        }
-    }
-    .main-header .dropdown-menu .dropdown-item {
-        margin-bottom: 8px;
-        margin-top: 8px;
-        box-shadow: 0px 1px 0 0 rgb(0 0 0 / 8%);
-    }  
-    .dropdown-menu{
-        background-color:$darkbg;
-        border: 0;
-        padding: 0 12px;
-        top: 0px !important;
-        border: 1px solid #353535;
-        // border-top: 0;
-        @media #{$max-sm}{
-            min-width: 300px;
-        }
-        @media #{$max-xsm}{
-            min-width: 270px;
-        }
-        .dropdown-item {
-            // box-shadow: 0px 1px 0 0 rgb(0 0 0 / 8%);
-            border-bottom: 1px solid rgba(0,0,0,0.08);
-            padding: 12px 0px;
-            border-bottom: 1px solid #353535;
-            margin: 10px 0;
-            &:hover{
-                background-color:#15141b;
-            }
-            &:last-child{
-                border-bottom: 0;
-            }
-            @media #{$max-sm}{
-                white-space: unset;
-            }
-        }  
-    }
-
-    .navbar-nav{
-        .nav-item{
-            margin-right:30px;
-            @media #{$max-xxxl}{
-                margin-right: 15px;
-            }
-            @media #{$max-xl}{
-                margin-right: 10px;
-            }
-            &:last-child{
-                margin-right: 0;
-            }
-            .nav-link{
-                font-size: 18px;
-                color:$white;
-                font-weight: 600;
-                padding: 28px 0;
-                border-bottom: 2px solid transparent;
-                transform: translateY(1px);
-                @media #{$max-xxxl}{
-                    font-size: 16px;
-                }
-                @media #{$max-xxl}{
-                    font-size: 14px;
-                }
-                &.active {
-                    border-bottom-color:$primary;
-                }
-            }
-            .dropdown-toggle::after {
-                content: "";
-                position: absolute;
-                left: auto;
-                z-index: 11;
-                display: block;
-                width: 8px;
-                height: 8px;
-                border-right: 0;
-                border-top: 2px solid  #0e0e0e;
-                border-left: 2px solid  #0e0e0e;
-                top: 34px;
-                transform: rotate(225deg);
-                right: -15px;
-            }
-        }
-    }
-    &.inner-header {
-        position: fixed;
-        top: 0;
-        left: 0;
-        right: 0;
-        width: calc(100% - 290px);
-        margin-left: auto;
-        background-color: $darkbg;
-        padding: 15px 10px;
-        @media #{$max-xl}{
-            width: 100%;
-        }
-        @media #{$max-xl}{
-            width: 100%;
-            padding: 0;
-            min-height: 64px;
-            background-color: #15141b;
-        }
-    }
-    .widg-col {
-        margin-right: 30px;
-        &:last-child{
-            margin-right: 0;
-        }
-        @media #{$max-xl}{
-            margin-right: 0;
-            margin-bottom: 0;
-            &:last-child{
-                margin-bottom: 0;
-            }
-        }
-        @media #{$max-xl}{
-            padding-left: 15px;
-            padding-right: 15px;
-        }
-        @media #{$max-xsm}{
-            padding-left: 5px;
-            padding-right: 5px;
-        }
-        @media (max-width:328px){
-            padding-left: 3px;
-            padding-right: 3px;
-        }
-    }
-    .btn{
-        @media #{$max-xxxl}{
-            padding: 8px 14px;
-            font-weight: 600;
-        }
-        @media #{$max-sm}{
-            padding: 4px 8px;
-            font-weight: 600;
-            font-size: 11px;
-        }
-    }
-}
-.right-widget {
-    display: flex;
-    align-items: center;
-    &.active{
-        display: block;
-    }
-    .prof-widg {
-        display: flex;
-        align-items: center;
-    }
-    // @media #{$max-xl}{
-    //         display: none;
-    //         flex-direction: column;
-    //         position: absolute;
-    //         top: 0;
-    //         left: 0;
-    //         right: 0;
-    //         padding-top: 0;
-    //         background-color: black;
-    //         margin-top: 64px;
-    //         padding: 10px 0px;
-    // }
-}
-.navbar-toggler{
-    @media #{$max-xl}{
-        display: none;
-    }
-}
-.prof-img {
-    background-color: #fff;
-    padding: 8px;
-    border-radius: 100%;
-    max-width: 40px;
-    // box-shadow: 0px 5px 7px -4px rgb(218 217 217);
-}
-
-.detail-col{
-    .img-wrap{
-        width: 40px;
-        height: 40px;
-        background: $primary;
-        border-radius: 100%;
-    }
-    .shp-sqr{
-        width: 20px;
-        height: 20px;
-        background-color: #fff;
-    }
-}
-
-.header-row {
-    display: flex;
-    flex-wrap: wrap;
-    .btm-right-widget {
-        margin-left: auto;
-    }
-    .nav-item {
-        margin-right: 15px;
-        .nav-link {
-            padding: 15px 0;
-            border-bottom: 2px solid transparent;
-            transform: translateY(4px);
-            position: relative;
-            color: rgba($white, 0.9);
-            font-size: 18px;
-            &:hover{
-                color: rgba($white, 0.9);
-            }
-            &.active {
-                &::before{
-                    content: '';
-                    position: absolute;
-                    left: 0;
-                    right: 0;
-                    bottom: 2px;
-                    width: 100%;
-                    height: 2px;
-                    background-color:$primary;
-                }
-                color: $primary;
-            }
-        }
-    }
-}
-.toggle-icon {
-    display: flex;
-    flex-wrap: wrap;
-    max-width: 30px;
-    cursor: pointer;
-    @media #{$min-xl}{
-        display: none;
-    }
-    span {
-        display: inline-block;
-        width: 4px;
-        height: 4px;
-        background: #fff;
-        margin: 2px 2px;
-        @media#{$max-sm}{
-            width: 3px;
-            height: 3px;
-        }
-    }
-}
-.dd-mask{
-    .rounded{
-        border: 0;
-        border-radius: 0;
-    }
-    .border-dark-800{
-        background-color: $black;
-    }
-    .bg-dark-1000 {
-        background-color: black;
-    }
-    .text-primary {
-        transform: translateY(2px);
-        --bs-text-opacity: 1;
-        color: #fff !important;
-    }
-}
-
-#web3-status-connected{
-    @media(max-width:380px){
-        padding-left: 8px !important;
-        padding-right: 8px !important;
-        padding-top: 6px !important;
-        padding-bottom: 6px !important;
-        font-size: 12px;
-        img{
-            max-width: 12px;
-        }
-
-    }
-    
-    div{
-        div{
-            &:first-child{
-                transform: translateY(2px);
-            }
-        }
-    }
-}
-.meta-mask {
-    margin-right: 12px;
-    @media (max-width:1030px){
-        margin-right: 24px;
-    }
-    @media #{$max-md}{
-        margin-right:20px
-    }
-    @media #{$max-sm}{
-        margin-right:16px
-    }
+    bottom: auto;
+    background: transparent;
 }
