--- a/public/assets/scss/style.scss
+++ b/public/assets/scss/style.scss
@@ -1,3 +1,4 @@
+@import "~bootstrap/scss/bootstrap";
 @import '../scss/core/core.scss';
-@import '../scss/pages/pages.scss';
-@import 'react-perfect-scrollbar/dist/css/styles.css';
+@import '../scss/fonts/fonts.scss';
+@import '../scss/pages/pages.scss'
